add styles form the form

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Cats App</title>
   </head>
   <body>
+    <form class="form">
+      <h1>The cat app</h1>
+      <div>
+        <div class="form-catfacts">
+          <h2>number of cats facts (50 maximum)</h2>
+          <div>
+            <input id="factsNum" class="catnumInput" type="number" />
+            <button id="getFactsBtn" class="btnsubimt">Subimt</button>
+          </div>
+        </div>
+
+        <div class="form-catpics">
+          <h2>number of cats pics (50 maximum)</h2>
+          <div>
+            <input id="picsNum" class="catnumInput" type="number" />
+            <button id="getpicsBtn" class="btnsubimt">Subimt</button>
+          </div>
+        </div>
+      </div>
+    </form>
+    <div class="result"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
